force-app/main/default/objects/cgcloud__System_Number__c/cgcloud__System_Number__c.object-meta.xml
<CustomObject>
    <description>System Number Definition</description>
    <label>System Number</label>
    <nameField>
        <displayFormat>SYS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>