force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active</description>
    <inlineHelpText>If Active is selected, the Number Segment Types Lu, Counter and InitCounter are required.
So please don&apos;t set active in the first new creation of a number definition.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>