force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__Segment_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segment_Validation__c</fullName>
    <description>Segment Validation</description>
    <label>Segment Validation</label>
    <summarizedField>cgcloud__System_Number_Segment__c.cgcloud__Type_Validation__c</summarizedField>
    <summaryForeignKey>cgcloud__System_Number_Segment__c.cgcloud__System_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>