force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__System_Fallback_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__System_Fallback_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Fallback Number</description>
    <inlineHelpText>System Fallback Number</inlineHelpText>
    <label>System Fallback Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__System_Number__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__System_Number__c</referenceTo>
    <relationshipLabel>System Numbers</relationshipLabel>
    <relationshipName>System_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>