force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <description>Usage</description>
    <inlineHelpText>Usage</inlineHelpText>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CashInvoice</fullName>
            </value>
            <value>
                <fullName>CreditInvoice</fullName>
            </value>
            <value>
                <fullName>CreditNote</fullName>
            </value>
            <value>
                <fullName>DeliveryNote</fullName>
            </value>
            <value>
                <fullName>FallbackNumber</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>NonValuatedDeliveryNote</fullName>
            </value>
            <value>
                <fullName>OrderConfirmation</fullName>
            </value>
            <value>
                <fullName>OrderEntry</fullName>
            </value>
            <value>
                <fullName>SvcRequest</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>ValuatedDeliveryNote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>