force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__Usage_Validate__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage_Validate__c</fullName>
    <description>Only used for Validation of field Usage (unique)</description>
    <label>Usage Validate</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>