force-app/main/default/objects/cgcloud__System_Number__c/fields/cgcloud__Warning_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Warning_Limit__c</fullName>
    <description>Warning Limit in %</description>
    <label>Warning Limit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>