force-app/main/default/objects/cgcloud__System_Number__c/validationRules/cgcloud__Check_Usage_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Usage_NotEmpty</fullName>
    <active>true</active>
    <description>The Usage can&apos;t be empty.</description>
    <errorConditionFormula>ISPICKVAL( cgcloud__Usage__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Usage__c</errorDisplayField>
    <errorMessage>The Usage can&apos;t be empty.</errorMessage>
</ValidationRule>