force-app/main/default/objects/cgcloud__System_Number__c/validationRules/cgcloud__Segment_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Segment_Type_Validation</fullName>
    <active>false</active>
    <description>A Number Definition that is set as Active must contain at least three segments: Segment Type &apos;LU&apos;, &apos;Counter&apos; and &apos;InitCounter&apos;.
          Also, these Segment Types can&apos;t be used twice.</description>
    <errorConditionFormula>AND( (cgcloud__Active__c = True),(cgcloud__Segment_Validation__c   &lt;&gt; 61  ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Active__c</errorDisplayField>
    <errorMessage>A Number Definition that is set as Active must contain at least three segments: Segment Type &apos;LU&apos;, &apos;Counter&apos; and &apos;InitCounter&apos;.
          Also, these Segment Types can&apos;t be used twice.</errorMessage>
</ValidationRule>